--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,9 +1,9 @@
-/* * {
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-} */
+  /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
+}
 
 body,
 #root {
