Netlify error fix

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -14,9 +14,9 @@ $display-font-weight: 700;
 
 // $primary: red;
 
-h1 {
-    // color: $colombia-red;
-}
+// h1 {
+//     color: $colombia-red;
+// }
 
 
     
