--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,3 +1,19 @@
 
-@import "/node_modules/bootstrap/scss/bootstrap";
+// @import "/node_modules/bootstrap/scss/bootstrap";
+@import 'custom';
+
+
+
+//header sizes
+
+h1 {
+    letter-spacing: 4px;
+    padding-top: 50px;
+}
+
+.bg-light {
+    background-image: linear-gradient(180deg, rgba($colombia-yellow, .15), rgba($colombia-red, .15), rgba($colombia-blue, .15));
+}
+
 // @import "/node_modules/bootstrap-icons/font/bootstrap-icons";
+@import "/node_modules/bootstrap/scss/bootstrap";
