--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,7 @@
-* {
+*,
+html,
+body,
+#root {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -6,6 +9,8 @@
 }
 
 body,
-#root {
+#root,
+html {
   height: 100vh;
+  /* width: 100vh; */
 }
