--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -6,7 +6,7 @@
 
 
 $display-font-sizes: (
-    1: 15rem,
+    1: 7rem,
     6: 1rem
 );
 
@@ -33,3 +33,9 @@ $display-font-weight: 700;
  
 
 // @import "/node_modules/bootstrap-icons/font/bootstrap-icons";
+
+@include media-breakpoint-up(md) 
+{ $display-font-sizes: (
+    1: 15rem,
+    // 6: 1rem
+); }
