--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -6,7 +6,7 @@
 
 
 $display-font-sizes: (
-    1: 7rem,
+    1: 10rem,
     6: 1rem
 );
 
@@ -34,8 +34,8 @@ $display-font-weight: 700;
 
 // @import "/node_modules/bootstrap-icons/font/bootstrap-icons";
 
-@include media-breakpoint-up(md) 
-{ $display-font-sizes: (
-    1: 15rem,
-    // 6: 1rem
-); }
+// @include media-breakpoint-up(md) 
+// { $display-font-sizes: (
+//     1: 15rem,
+//     // 6: 1rem
+// ); }
